k8s/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metallb-system
  name: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metallb
      component: controller
  template:
    metadata:
      labels:
        app: metallb
        component: controller
    spec:
      serviceAccountName: controller
      containers:
        - name: controller
          image: quay.io/metallb/controller:v0.13.7
          args:
            - --port=7472
          ports:
            - name: http
              containerPort: 7472
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
