k8s/speaker-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: metallb-system
  name: speaker
spec:
  selector:
    matchLabels:
      app: metallb
      component: speaker
  template:
    metadata:
      labels:
        app: metallb
        component: speaker
    spec:
      serviceAccountName: speaker
      containers:
        - name: speaker
          image: quay.io/metallb/speaker:v0.13.7
          args:
            - --port=7472
            - --node-name=$(NODE_NAME)
          ports:
            - name: http
              containerPort: 7472
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
      nodeSelector:
        kubernetes.io/os: linux
