k8s/my-nginx-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31544
    - port: 443
      targetPort: 443
      nodePort: 30548
  selector:
    app.kubernetes.io/name: ingress-nginx
